# animals-classifier

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  models.dvc  pyproject.toml  train.py
.dvc/: config
.github/workflows/: pre-commit.yaml
animals_classifier/: dataset.py  infer.py  model.py  train.py
configs/: config.yaml
data/: .gitignore
models/: .gitignore  resnet18.pt.dvc
src/: train.py
